# lyra

./: CHANGELOG.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: release-tauri.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/common/: ContextMenu.vue  OmniSearch.vue  SettingsDialog.vue  TabBar.vue  TitleBar.vue
src/components/editor/: EditorView.vue  FindBar.vue  MilkdownEditor.vue  StatusBar.vue
src/components/sidebar/: FileTreeNode.vue  OutlineList.vue  OutlineView.vue  Sidebar.vue
src/composables/: useContextMenu.ts  useFileSystem.ts
src/i18n/: en.ts  index.ts  zh.ts
src/stores/: editor.ts  files.ts  settings.ts
src/styles/: base.css  editor.css  variables.css
src/styles/themes/: github.css  gothic.css  newsprint.css  night.css  pixyll.css  whitey.css
