[package]
name = "lyra"
version = "1.1.0"
description = "Lyra — 优雅的所见即所得 Markdown 编辑器"
authors = ["jack"]
edition = "2021"

[lib]
name = "lyra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
